add_library(adv1 adv1.cc)
add_library(adv2 adv2.cc)
add_library(adv3 adv3.cc)
add_library(adv4 adv4.cc)
add_library(adv5 adv5.cc)
add_library(adv6 adv6.cc)
add_library(adv7 adv7.cc)
add_library(adv8 adv8.cc)
add_library(adv9 adv9.cc)
add_library(adv10 adv10.cc)
add_library(adv11 adv11.cc)
add_library(adv12 adv12.cc)
add_library(adv13 adv13.cc)
add_library(adv14 adv14.cc)
add_library(adv15 adv15.cc)
add_library(adv16 adv16.cc)
add_library(adv17 adv17.cc)
add_library(adv18 adv18.cc)
