add_library(inter1 inter1.cc)
add_library(inter2 inter2.cc)
add_library(inter4 inter4.cc)
add_library(inter5 inter5.cc)
add_library(inter6 inter6.cc)
add_library(inter7 inter7.cc)
add_library(inter9 inter9.cc)
add_library(inter10 inter10.cc)
add_library(inter15 inter15.cc)
add_library(inter16 inter16.cc)
add_library(inter17 inter17.cc)
